--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BlueNotify</string>
     <string name="service_name">BlueNotifyListenerService</string>
+
+    <string name="sdp_uuid">e3576476-11a5-4af5-880a-20326f52a96c</string>
 </resources>
